Add endpoint isloggedin
